--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "node_server_practice",
-  "version": "1.0.0",
-  "description": "Node.js practice server",
-  "main": "server.js",
+  "name": "node-server-practice",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node ./bin/www"
   },
-  "author": "Chris Falck",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "body-parser": "~1.15.2",
+    "consolidate": "^0.14.5",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.14.0",
+    "jade": "~1.11.0",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0",
+    "swig": "^1.4.2"
   }
 }
