--- a/package.json
+++ b/package.json
@@ -1,19 +1,53 @@
 {
-  "name": "node-server-practice",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "body-parser": "~1.15.2",
-    "consolidate": "^0.14.5",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.14.0",
-    "jade": "~1.11.0",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0",
-    "swig": "^1.4.2"
-  }
+    "name": "practice",
+    "description": "",
+    "version": "0.0.1",
+    "private": false,
+    "author": "Chris Falck",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/chrisfalck/practice.git"
+    },
+    "engines": {
+        "node": "0.10.x",
+        "npm": "1.2.x"
+    },
+    "scripts": {
+        "start": "node node_modules/grunt-cli/bin/grunt",
+        "test": "node node_modules/grunt-cli/bin/grunt test"
+    },
+    "dependencies": {
+        "express": "latest",
+        "morgan": "latest",
+        "cookie-parser": "latest",
+        "serve-static": "latest",
+        "body-parser": "latest",
+        "compression": "latest",
+        "method-override": "latest",
+        "express-session": "latest",
+        "static-favicon": "latest",
+        "consolidate": "latest",
+        "jade": "latest",
+        "mongoose": "latest",
+        "connect-mongo": "latest",
+        "connect-flash": "latest",
+        "underscore": "latest",
+        "async": "latest",
+        "view-helpers": "latest",
+        "forever": "latest",
+        "grunt": "latest",
+        "grunt-cli": "latest"
+    },
+    "devDependencies": {
+        "supertest": "latest",
+        "should": "latest",
+        
+        "grunt-contrib-watch": "latest",
+        "grunt-contrib-jshint": "latest",
+        "grunt-nodemon": "latest",
+        "grunt-concurrent": "latest",
+        "grunt-mocha-test": "latest",
+        "load-grunt-tasks": "~0.1.0",
+        "time-grunt": "~0.1.1"
+    }
 }
